# hybrid-fusion

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  REVIEW.md
.github/workflows/: ci.yml
.kilo/plans/: all-github-issues-one-pr.md
docs/: implementing-backends.md
examples/: hybrid_telemetry.rs  sentry_init.rs  simple_hybrid.rs
src/: error.rs  hybrid.rs  lib.rs  projector.rs  telemetry.rs  tensor.rs  traits.rs  types.rs
src/backends/: mod.rs  simple_snn.rs  simple_transformer.rs
tests/: hybrid_network.rs  tensor_properties.rs
