[package]
name = "hybrid-fusion"
version = "0.2.0"
edition = "2024"
description = "Backend-agnostic pure-Rust orchestrator for hybrid transformer <-> spiking neural network stacks. Trait-based, zero external math dependencies."
repository = "https://github.com/Limen-Neural/hybrid-fusion"
license = "MIT OR Apache-2.0"
keywords = ["neuromorphic", "snn", "llm", "transformer", "hybrid"]
categories = ["science", "algorithms"]
readme = "README.md"
exclude = ["docs/"]

[lib]
name = "hybrid_fusion"
path = "src/lib.rs"

# ── Core pure-Rust stack ──────────────────────────────────────────────────────
[dependencies]

# ── Serialisation / Utility ────────────────────────────────────────────────────
serde      = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror  = "1.0"

# ── Optional: Sentry error reporting ──────────────────────────────────────────
# Enabling `sentry` pulls a sizable transitive tree (reqwest/hyper/tokio/ring).
# Prefer it only in service binaries; library default builds stay lean.
sentry = { version = "0.34", optional = true, default-features = false, features = ["backtrace", "contexts", "panic", "reqwest", "rustls"] }

[features]
default  = []
sentry   = ["dep:sentry"]
backends = []

[dev-dependencies]
serde_json = "1.0"
proptest   = "1"

[[example]]
name = "sentry_init"
required-features = ["sentry"]

[[example]]
name = "simple_hybrid"
required-features = ["backends"]

[[example]]
name = "hybrid_telemetry"

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1

[workspace]
# Standalone: detach from any parent Cargo workspace (mirrors cortex-tensor).
